chore: sync v0.6.3 from private dev repo
